export const snapshot = {};

snapshot[`toc plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      ext: ".html",
    },
  ],
  src: [
    "/",
    "/_includes",
    "/_includes/layout.vto",
    "/index.md",
  ],
}
`;

snapshot[`toc plugin 2`] = `[]`;

snapshot[`toc plugin 3`] = `
[
  {
    content: '<!DOCTYPE html>
<html><head></head><body>
  <div id="content">
    <h1>Demo of TOC plugin</h1>
<p>This is the content</p>
<h2 id="h_1-0" tabindex="-1"><a href="#h_1-0">1.0</a></h2>
<p>First section</p>
<h3 id="h_1-1" tabindex="-1"><a href="#h_1-1">1.1</a></h3>
<p>First subsection</p>
<h2 id="h_2-0" tabindex="-1"><a href="#h_2-0">2.0</a></h2>
<p>Second section</p>
<h2 id="h_3-0" tabindex="-1"><a href="#h_3-0">3.0</a></h2>
<p>Third section</p>
<h3 id="h_3-1" tabindex="-1"><a href="#h_3-1">3.1</a></h3>
<p>First subsection of the third section</p>
<h4 id="h_3-1-1" tabindex="-1"><a href="#h_3-1-1">3.1.1</a></h4>
<p>First subsection of the first subsection of the third section</p>
<h5 id="h_3-1-1-1" tabindex="-1"><a href="#h_3-1-1-1">3.1.1.1</a></h5>
<p>First subsection of the first subsection of the first subsection of the third section</p>
<h5 id="h_3-1-1-1-1" tabindex="-1"><a href="#h_3-1-1-1-1">3.1.1.1.1</a></h5>
<p>First subsection of the first subsection of the first subsection of the first subsection of the third section</p>
<h2 id="h_4" tabindex="-1"><a href="#h_4">4</a></h2>
<p>Forth section</p>

  </div>

  <nav>
  <ol><li>
<a href="#h_1-0">1.0</a>
<ol>
<li>
<a href="#h_1-1">1.1</a>
</li>
</ol>
</li>
<li>
<a href="#h_2-0">2.0</a>
</li>
<li>
<a href="#h_3-0">3.0</a>
<ol>
<li>
<a href="#h_3-1">3.1</a>
<ol>
<li>
<a href="#h_3-1-1">3.1.1</a>
<ol>
<li>
<a href="#h_3-1-1-1">3.1.1.1</a>
</li>
<li>
<a href="#h_3-1-1-1-1">3.1.1.1.1</a>
</li>
</ol>
</li>
</ol>
</li>
</ol>
</li>
<li>
<a href="#h_4">4</a>
</li></ol></nav>


</body></html>',
    data: {
      basename: "",
      children: "<h1>Demo of TOC plugin</h1>
<p>This is the content</p>
<h2>1.0</h2>
<p>First section</p>
<h3>1.1</h3>
<p>First subsection</p>
<h2>2.0</h2>
<p>Second section</p>
<h2>3.0</h2>
<p>Third section</p>
<h3>3.1</h3>
<p>First subsection of the third section</p>
<h4>3.1.1</h4>
<p>First subsection of the first subsection of the third section</p>
<h5>3.1.1.1</h5>
<p>First subsection of the first subsection of the first subsection of the third section</p>
<h5>3.1.1.1.1</h5>
<p>First subsection of the first subsection of the first subsection of the first subsection of the third section</p>
<h2>4</h2>
<p>Forth section</p>
",
      content: "# Demo of TOC plugin

This is the content

## 1.0

First section

### 1.1

First subsection

## 2.0

Second section

## 3.0

Third section

### 3.1

First subsection of the third section

#### 3.1.1

First subsection of the first subsection of the third section

##### 3.1.1.1

First subsection of the first subsection of the first subsection of the third section

##### 3.1.1.1.1

First subsection of the first subsection of the first subsection of the first subsection of the third section

## 4

Forth section
",
      date: [],
      layout: "layout.vto",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
        "isCopy",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/",
    },
    src: {
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
]
`;

snapshot[`toc plugin (linkInsideHeader) 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      ext: ".html",
    },
  ],
  src: [
    "/",
    "/_includes",
    "/_includes/layout.vto",
    "/index.md",
  ],
}
`;

snapshot[`toc plugin (linkInsideHeader) 2`] = `[]`;

snapshot[`toc plugin (linkInsideHeader) 3`] = `
[
  {
    content: '<!DOCTYPE html>
<html><head></head><body>
  <div id="content">
    <h1 id="demo-of-toc-plugin"><a href="#demo-of-toc-plugin">¶</a> Demo of TOC plugin</h1>
<p>This is the content</p>
<h2 id="h_1-0"><a href="#h_1-0">¶</a> 1.0</h2>
<p>First section</p>
<h3 id="h_1-1"><a href="#h_1-1">¶</a> 1.1</h3>
<p>First subsection</p>
<h2 id="h_2-0"><a href="#h_2-0">¶</a> 2.0</h2>
<p>Second section</p>
<h2 id="h_3-0"><a href="#h_3-0">¶</a> 3.0</h2>
<p>Third section</p>
<h3 id="h_3-1"><a href="#h_3-1">¶</a> 3.1</h3>
<p>First subsection of the third section</p>
<h4 id="h_3-1-1"><a href="#h_3-1-1">¶</a> 3.1.1</h4>
<p>First subsection of the first subsection of the third section</p>
<h5 id="h_3-1-1-1"><a href="#h_3-1-1-1">¶</a> 3.1.1.1</h5>
<p>First subsection of the first subsection of the first subsection of the third section</p>
<h5 id="h_3-1-1-1-1"><a href="#h_3-1-1-1-1">¶</a> 3.1.1.1.1</h5>
<p>First subsection of the first subsection of the first subsection of the first subsection of the third section</p>
<h2 id="h_4"><a href="#h_4">¶</a> 4</h2>
<p>Forth section</p>

  </div>

  <nav>
  <ol><li>
<a href="#demo-of-toc-plugin">Demo of TOC plugin</a>
<ol>
<li>
<a href="#h_1-0">1.0</a>
<ol>
<li>
<a href="#h_1-1">1.1</a>
</li>
</ol>
</li>
<li>
<a href="#h_2-0">2.0</a>
</li>
<li>
<a href="#h_3-0">3.0</a>
<ol>
<li>
<a href="#h_3-1">3.1</a>
<ol>
<li>
<a href="#h_3-1-1">3.1.1</a>
<ol>
<li>
<a href="#h_3-1-1-1">3.1.1.1</a>
</li>
<li>
<a href="#h_3-1-1-1-1">3.1.1.1.1</a>
</li>
</ol>
</li>
</ol>
</li>
</ol>
</li>
<li>
<a href="#h_4">4</a>
</li>
</ol>
</li></ol></nav>


</body></html>',
    data: {
      basename: "",
      children: "<h1>Demo of TOC plugin</h1>
<p>This is the content</p>
<h2>1.0</h2>
<p>First section</p>
<h3>1.1</h3>
<p>First subsection</p>
<h2>2.0</h2>
<p>Second section</p>
<h2>3.0</h2>
<p>Third section</p>
<h3>3.1</h3>
<p>First subsection of the third section</p>
<h4>3.1.1</h4>
<p>First subsection of the first subsection of the third section</p>
<h5>3.1.1.1</h5>
<p>First subsection of the first subsection of the first subsection of the third section</p>
<h5>3.1.1.1.1</h5>
<p>First subsection of the first subsection of the first subsection of the first subsection of the third section</p>
<h2>4</h2>
<p>Forth section</p>
",
      content: "# Demo of TOC plugin

This is the content

## 1.0

First section

### 1.1

First subsection

## 2.0

Second section

## 3.0

Third section

### 3.1

First subsection of the third section

#### 3.1.1

First subsection of the first subsection of the third section

##### 3.1.1.1

First subsection of the first subsection of the first subsection of the third section

##### 3.1.1.1.1

First subsection of the first subsection of the first subsection of the first subsection of the third section

## 4

Forth section
",
      date: [],
      layout: "layout.vto",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
        "isCopy",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/",
    },
    src: {
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
]
`;
